[package]
name = "tcl_derive"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Macros for tcl crate to register functions/closures as Tcl commands"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit-mut"] }
uuid = { version = "0.8", features = ["v4"] }
