[package]
name = "tcl_derive"
version = "0.1.4"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = [ "tcl", "binding", "proc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/tcltk"
description = "Macros for tcl crate to register functions/closures as Tcl commands"

[lib]
proc-macro = true

[dependencies]
bind_syn = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits","full","visit-mut"] }
uuid = { version = "1.6", features = ["v4"] }
